# learn-python

./: .gitignore  README.md  pyproject.toml
fundamentals/: README.md
fundamentals/manage-modules/: main.py
fundamentals/manage-modules/aritmetica/: __init__.py
fundamentals/manage-modules/geometrica/: __init__.py
fundamentals/next-for-search/: main.py
fundamentals/with-block/: main.py
learn-python/casos-de-uso/manage-modules/: main.py
learn-python/casos-de-uso/manage-modules/geometrica/: module.py
learn-python/fundamentals/: README.md
learn-python/fundamentals/couroutines-generators/: corroutine-loop.py  generator-loop.py  introducao.py
learn-python/fundamentals/manage-modules/aritmetica/: module.py
learn-python/fundamentals/with-block/: main.py
learn-python/fundamentals/wsgi-asgi/: README.md
learn-python/tools/: README.md
learn-python/tools/mypy/: main.py  mypy.ini
tools/: README.md
